--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "dotswan/filament-map-picker",
-    "description": "Easily pick and retrieve geo-coordinates using a map-based interface in your Filament applications.",
+    "name": "nersus15/filament-map-picker",
+    "description": "Easily pick and retrieve geo-coordinates using a map-based interface in your Filament applications. Forks From https://github.com/dotswan/filament-map-picker",
     "keywords": [
         "dotswan",
         "laravel",
